# citenexus

./: .env.example  .gitignore  .vsync  CHANGELOG.md  CLAUDE.md  INPROGRESS.md  README.md  Taskfile.local.yml  Taskfile.yml  compose.yaml  docs.html  index.html  pyproject.toml
cli/: package.json
conformance/: README.md  prompts.json
core/: Cargo.toml  README.md
core/src/: detect.rs  ffi.rs  lib.rs  store.rs  types.rs
core/src/extract/: csv.rs  txt.rs
core/tests/: detect_test.rs  extract_test.rs  ffi_store_test.rs  store_test.rs
docs/: CONTENT-COVERAGE-2026-07-08.md  CONTENT-COVERAGE.md  DEMO-live-vision-2026-07-08.md  OPENSPEC-WORKFLOW.md  SPEC-PORTS-v1.md  SPEC-authority-weighting-v1.md  SPEC-v6.md  SPEC-vision-image-description-v1.md  SPIKE-ports-libs.md
example/: .env.example  run.py
golang/: README.md  go.mod
js/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
ports/: README.md
python/: README.md  Taskfile.yml  compose.yaml  pyproject.toml
python/example/: golden.csv  run.py
python/example/code_graph/: structural_distiller.py
python/example/schema_graph/: schema_distiller.py
python/scripts/: cite-check-to-brain.sh  gen_conformance.py
python/scripts/demo/: citenexus_capabilities_demo.py
python/scripts/demo/assets/: clinical-trial-protocol.docx
python/src/citenexus/: __init__.py  _native.py  client.py  delete.py  evaluate.py  hooks.py  http.py  tokenize.py  tools.py
python/src/citenexus/access/: prefilter.py
python/src/citenexus/answer/: __init__.py  agentic.py  anthropic.py  decision.py  generator.py  result.py  verify.py
python/src/citenexus/cli/: __init__.py  cite_check.py  verify.py
python/src/citenexus/code/: __init__.py  facade.py
python/src/citenexus/config/: __init__.py  loader.py  schema.py  signals.py  validate.py
python/src/citenexus/domain/: __init__.py  model.py  vision.py
python/src/citenexus/embed/: client.py
python/src/citenexus/evidence/: __init__.py  builder.py  chunked_builder.py  unit.py
python/src/citenexus/extract/: __init__.py  code.py  csv.py  dispatch.py  docx.py  html.py  image.py  markdown.py  md.py  mime.py  pdf.py  pptx.py  schema_openapi.py  schema_sql.py  types.py  xlsx.py
python/src/citenexus/fulfiller/: __init__.py  fake.py  host.py  requests.py
python/src/citenexus/graph/: __init__.py  retrieve.py  store.py
python/src/citenexus/ingest/: pipeline.py  web.py
python/src/citenexus/lang/: detect.py  fallback.py
python/src/citenexus/memory/: __init__.py  store.py
python/src/citenexus/plugins/: __init__.py  base.py
python/src/citenexus/provenance/: __init__.py  rebuild_planner.py  stamp.py
python/src/citenexus/retrieve/: __init__.py  fusion.py  lexical.py  rerank.py  structure.py
python/src/citenexus/schema/: __init__.py  facade.py
python/src/citenexus/smoke/: __init__.py  pipeline.py
python/src/citenexus/storage/: __init__.py  backend.py  bm25.py  lance_store.py  location.py  manifest.py  paths.py  postgres_store.py  protocols.py
python/src/citenexus/telemetry/: __init__.py  counters.py
python/src/citenexus/testing/: fakes.py
python/src/citenexus/vision/: client.py  describe.py  fulfill.py  requests.py  units.py
python/src/citenexus/wiki/: __init__.py  store.py
python/src/citenexus/worker/: executor.py  queue.py  resume.py
python/tests/: test_client_auth_headers.py  test_client_delete.py  test_client_text_search.py  test_conformance_fixtures.py  test_conformance_multilingual.py  test_http_client.py  test_tokenize.py
python/tests/access/: test_prefilter.py  test_scope.py
python/tests/answer/: test_agentic.py  test_anthropic_generator.py  test_decision.py  test_deep_ask_client.py
python/tests/cli/: test_cite_check.py  test_cite_check_brain_glue.py  test_verify.py
python/tests/code/: test_code_facade.py  test_structural_graph.py
python/tests/config/: test_loader.py
python/tests/core/: test_rust_code_parity.py  test_rust_parity.py  test_rust_rrf_parity.py  test_rust_schema_parity.py
python/tests/domain/: test_vision_request.py
python/tests/evidence/: test_chunked_builder.py  test_chunker.py
python/tests/extract/: test_csv.py  test_document_metadata.py  test_docx.py  test_html.py  test_image.py  test_markdown.py  test_pdf.py  test_plain.py  test_pptx.py  test_xlsx.py
python/tests/extract/fixtures/: pdf_builder.py  pdf_table_builder.py
python/tests/fulfiller/: test_fake_fulfiller.py  test_model_fulfiller.py  test_model_requests.py  test_signing.py
python/tests/graph/: test_graph_confidence.py  test_graph_deferred.py  test_graph_retriever.py
python/tests/ingest/: test_caption_citation_e2e.py  test_code_block_citation_e2e.py  test_csv_table_citation_e2e.py  test_docx_pptx_table_citation_e2e.py  test_html_table_citation_e2e.py  test_list_citation_e2e.py  test_pdf_table_citation_e2e.py  test_pipeline.py  test_vision_emit.py  test_vision_prefilter_wiring.py  test_vision_real_pdf_e2e.py  test_vision_two_phase.py
python/tests/lang/: test_detect.py  test_fallback.py
python/tests/memory/: test_memory_client.py
python/tests/plugins/: test_base.py  test_registry.py
python/tests/provenance/: test_stamp.py
python/tests/retrieve/: test_dual_query.py  test_engine.py  test_fusion.py  test_lexical_native.py  test_reformulate.py  test_rerank.py  test_structure.py
python/tests/schema/: test_schema_facade.py  test_schema_graph.py
python/tests/storage/: test_bm25_text_search.py  test_delete_document.py  test_integration_postgres.py  test_lance_store.py  test_manifest.py
python/tests/telemetry/: test_counters.py  test_events.py
python/tests/vision/: test_describe.py  test_vision_fulfill.py  test_vision_requests.py  test_vision_units.py
python/tests/wiki/: test_remove_document.py  test_store_wiki.py
python/tests/worker/: test_dlq.py  test_executor.py  test_queue.py  test_resume.py
rust/: Cargo.toml  README.md
site/: astro.config.mjs  (+3 more)
spikes/dist-real-core/wheel/: build.sh  pyproject.toml
spikes/dist-real-core/wheel/src/citenexus_core_probe/: __init__.py
spikes/dist-real-core/wheel/src/citenexus_core_probe/_lib/: .gitkeep
(+653 files in other folders)
