[project]
# NOTE: the PyPI name "trustrag" is taken; the publish dist-name will get a
# suffix at L5 (import package stays `trustrag`). Local build is unaffected.
name = "trustrag"
version = "0.0.0"
description = "Evidence-first, multilingual, S3-native RAG for domains where a wrong answer is worse than no answer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Muthukumaran Navaneethakrishnan", email = "muthuishere@gmail.com" }]
keywords = ["rag", "retrieval", "evidence", "multilingual", "s3", "lancedb"]
dependencies = [
    "boto3>=1.43.36",
    "lancedb>=0.33.0",
    "pydantic>=2.7",
    "pyyaml>=6.0.3",
]

[project.scripts]
trustrag = "trustrag.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0.12.20260518",
    "types-boto3>=1.43.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustrag"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["lancedb", "lancedb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, hermetic tests using fakes (default)",
    "integration: opt-in tests that hit real endpoints (local Ollama, S3); deselected by default",
]

[tool.coverage.run]
branch = true
source = ["src/trustrag"]

[tool.coverage.report]
show_missing = true
