[project]
# PyPI dist name. "citenexus" is taken on PyPI, so we publish as "citenexus";
# the import package stays `citenexus` (see docs/adr/0003-pypi-dist-name.md).
name = "citenexus"
version = "0.6.0"
description = "Evidence-first, multilingual, S3-native RAG for domains where a wrong answer is worse than no answer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Muthukumaran Navaneethakrishnan", email = "muthuishere@gmail.com" }]
keywords = ["rag", "retrieval", "evidence", "multilingual", "s3", "lancedb"]
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.43.36",
    "fasttext-wheel>=0.9.2",
    "lancedb>=0.33.0",
    "lxml>=6.1.1",
    "markdown-it-py>=4.2.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.7",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Postgres/pgvector VectorStore backend (LanceDB is the zero-infra default).
postgres = ["psycopg[binary]>=3.2"]

[project.scripts]
citenexus = "citenexus.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0.12.20260518",
    "types-boto3>=1.43.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citenexus"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lancedb", "lancedb.*",
    "psycopg", "psycopg.*",
    "fasttext", "fasttext.*",
    "pdfplumber", "pdfplumber.*",
    "docx", "docx.*",
    "pptx", "pptx.*",
    "bs4", "bs4.*",
    "markdown_it", "markdown_it.*",
    "openpyxl", "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast, hermetic tests using fakes (default)",
    "integration: opt-in tests that hit real endpoints (local Ollama, S3); deselected by default",
]

[tool.coverage.run]
branch = true
source = ["src/citenexus"]

[tool.coverage.report]
show_missing = true
